add remaining images to shop page

--- a/shop.html
+++ b/shop.html
@@ -72,7 +72,7 @@
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#bread">Bread</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#cake">Cake</a>
+                <a class="dropdown-item" href="#desserts">Desserts</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#pasta">Pasta</a>
                 <div class="dropdown-divider"></div>
@@ -466,17 +466,21 @@
         </div>
       </section>
       <!--End of product category-->
-      <div class="space" id="cake"></div>
+      <div class="space" id="desserts"></div>
       <!--The following code was written in collaboration with Iuliia Ustkachkintseva and included with her permission-->
       <!--Product category-->
       <section>
-        <h4 id="category_title">Cake</h4>
+        <h4 id="category_title">Desserts</h4>
         <!--Product card-->
         <div class="product_category">
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="Vanila cheesecake" />
+            <img
+              src="img\shop_page\vanilla cheese cake.jpg"
+              class="card-img-top"
+              alt="Vanilla cheesecake"
+            />
             <div class="card-body">
-              <h5 class="card-title">Vanilla Cheesecake</h5>
+              <h5 class="card-title">Cheesecake</h5>
               <p class="card-text">99p each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
@@ -493,9 +497,13 @@
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="Tiramisu cake" />
+            <img
+              src="img\shop_page\furkan-dokuzlar-trRIeLsc_20-unsplash.jpg"
+              class="card-img-top"
+              alt="Tiramisu cake"
+            />
             <div class="card-body">
-              <h5 class="card-title">Tiramisu Cake</h5>
+              <h5 class="card-title">Tiramisu</h5>
               <p class="card-text">£1.15 each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
@@ -512,7 +520,11 @@
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="Blueberry cake" />
+            <img
+              src="img\shop_page\aneta-voborilova-1FdKXoTSuWU-unsplash.jpg"
+              class="card-img-top"
+              alt="Blueberry cake"
+            />
             <div class="card-body">
               <h5 class="card-title">Blueberry Cake</h5>
               <p class="card-text">£1.30 each</p>
@@ -531,7 +543,11 @@
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="Strawberry cake" />
+            <img
+              src="img\shop_page\massimo-adami-TZiT3GH8aW4-unsplash.jpg"
+              class="card-img-top"
+              alt="Strawberry cake"
+            />
             <div class="card-body">
               <h5 class="card-title">Strawberry Cake</h5>
               <p class="card-text">£1.10 each</p>
@@ -550,9 +566,13 @@
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="Chocolate fudge cake" />
+            <img
+              src="img\shop_page\Chocolate-fudge cake.jpg"
+              class="card-img-top"
+              alt="Chocolate fudge cake"
+            />
             <div class="card-body">
-              <h5 class="card-title">Chocolate Fudge Cake</h5>
+              <h5 class="card-title">Chocolate Cake</h5>
               <p class="card-text">£1.15 each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
@@ -577,9 +597,13 @@
         <!--Product card-->
         <div class="product_category">
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="Penne pasta" />
+            <img
+              src="img\shop_page\chuttersnap-ycnyotoyk8o-unsplash.jpg"
+              class="card-img-top"
+              alt="Penne pasta"
+            />
             <div class="card-body">
-              <h5 class="card-title">Penne Pasta</h5>
+              <h5 class="card-title">Penne</h5>
               <p class="card-text">75p each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
@@ -596,9 +620,13 @@
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="Fettucine pasta" />
+            <img
+              src="img\shop_page\pasta-fettuccine.jpg"
+              class="card-img-top"
+              alt="Fettucine pasta"
+            />
             <div class="card-body">
-              <h5 class="card-title">Fettucine Pasta</h5>
+              <h5 class="card-title">Fettucine</h5>
               <p class="card-text">75p each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
@@ -615,9 +643,13 @@
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="Rigatoni pasta" />
+            <img
+              src="img\shop_page\lemon-5GEKbcciR4k-unsplash.jpg"
+              class="card-img-top"
+              alt="Rigatoni pasta"
+            />
             <div class="card-body">
-              <h5 class="card-title">Rigatoni Pasta</h5>
+              <h5 class="card-title">Rigatoni</h5>
               <p class="card-text">£1 each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
@@ -634,9 +666,13 @@
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="Spaghetti pasta" />
+            <img
+              src="img\shop_page\pasta-spaghetti.jpg"
+              class="card-img-top"
+              alt="Spaghetti pasta"
+            />
             <div class="card-body">
-              <h5 class="card-title">Spaghetti Pasta</h5>
+              <h5 class="card-title">Spaghetti</h5>
               <p class="card-text">70p each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
@@ -653,9 +689,13 @@
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="Farfalle pasta" />
+            <img
+              src="img\shop_page\bozhin-karaivanov-ffNKqXzZ5Ko-unsplash.jpg"
+              class="card-img-top"
+              alt="Farfalle pasta"
+            />
             <div class="card-body">
-              <h5 class="card-title">Farfalle Pasta</h5>
+              <h5 class="card-title">Farfalle</h5>
               <p class="card-text">75p each</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
@@ -680,9 +720,13 @@
         <!--Product card-->
         <div class="product_category">
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="Brie cheese" />
+            <img
+              src="img\shop_page\cheese-brie.jpg"
+              class="card-img-top"
+              alt="Brie cheese"
+            />
             <div class="card-body">
-              <h5 class="card-title">Brie Cheese</h5>
+              <h5 class="card-title">Brie</h5>
               <p class="card-text">£3.00 per 200g</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
@@ -699,9 +743,13 @@
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="Mozzarella cheese" />
+            <img
+              src="img\shop_page\cheese-mozzarella.jpg"
+              class="card-img-top"
+              alt="Mozzarella cheese"
+            />
             <div class="card-body">
-              <h5 class="card-title">Mozzarella Cheese</h5>
+              <h5 class="card-title">Mozzarella</h5>
               <p class="card-text">£2.15 for 250g</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
@@ -718,9 +766,13 @@
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="Stilton cheese" />
+            <img
+              src="img\shop_page\cheese-stilton.jpg"
+              class="card-img-top"
+              alt="Stilton cheese"
+            />
             <div class="card-body">
-              <h5 class="card-title">Stilton Cheese</h5>
+              <h5 class="card-title">Stilton</h5>
               <p class="card-text">£4.05 for 250g</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
@@ -743,7 +795,7 @@
               alt="Parmesan cheese"
             />
             <div class="card-body">
-              <h5 class="card-title">Parmesan Cheese</h5>
+              <h5 class="card-title">Parmesan</h5>
               <p class="card-text">£3 per 150g</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
@@ -760,10 +812,14 @@
           </div>
           <!--Product card-->
           <div class="card text-center">
-            <img src="..." class="card-img-top" alt="Ricotta cheese" />
+            <img
+              src="img\shop_page\cheese-ricotta.jpg"
+              class="card-img-top"
+              alt="Ricotta cheese"
+            />
             <div class="card-body">
-              <h5 class="card-title">Ricotta Cheese</h5>
-              <p class="card-text">50p each</p>
+              <h5 class="card-title">Ricotta</h5>
+              <p class="card-text">£3.20 per 150g</p>
               <!--Quantity dropdown box-->
               <label for="quantity">Quantity:</label>
               <select name="quantity" class="quantity">
