--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="shop.html#bread">Bread</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="shop.html#cake">Cake</a>
+                <a class="dropdown-item" href="shop.html#desserts">Desserts</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="shop.html#pasta">Pasta</a>
                 <div class="dropdown-divider"></div>
