change replicated IDs to classes on all pages

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
         <a class="navbar-brand"
           ><img
-            id="company_logo"
+            class="company_logo"
             src="img\landing_page\Logo.png
           "
             alt="Fig and Pepper logo"
@@ -51,7 +51,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" class="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
               <a class="nav-link" href="./register.html">Log in/register</a>
@@ -85,9 +85,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="nav-item">
-              <a class="nav-link" href="#"
+              <a class="nav-link"
                 ><img
-                  id="cart_icon"
+                  class="cart_icon"
                   src="img\landing_page\cart4.svg"
                   alt="Shopping cart icon"
                   onclick="cartAlert()"
@@ -189,8 +189,8 @@
       </div>
     </main>
     <!--Social media links-->
-    <footer id="landing_footer">
-      <div id="social_media">
+    <footer class="landing_footer">
+      <div class="social_media">
         <a href="https://twitter.com/?lang=en-gb"
           ><i class="fa-brands fa-square-twitter"></i
         ></a>
