--- a/shop.html
+++ b/shop.html
@@ -33,7 +33,7 @@
       <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
         <a class="navbar-brand" href="./index.html"
           ><img
-            id="company_logo"
+            class="company_logo"
             src="img\landing_page\Logo.png
           "
             alt="Fig and Pepper logo"
@@ -50,7 +50,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" class="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
               <a class="nav-link" href="./register.html">Log in/register</a>
@@ -82,9 +82,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="nav-item">
-              <a class="nav-link" href="#"
+              <a class="nav-link"
                 ><img
-                  id="cart_icon"
+                  class="cart_icon"
                   src="img\landing_page\cart4.svg"
                   alt="Shopping cart icon"
                   onclick="cartAlert()"
@@ -100,7 +100,7 @@
       <div class="space" id="fruit"></div>
       <!--Product category-->
       <section id="top_section">
-        <h4 id="category_title">Fruit</h4>
+        <h4 class="category_title">Fruit</h4>
         <!--Product card-->
         <div class="product_category">
           <div class="card text-center">
@@ -223,7 +223,7 @@
       <div class="space" id="vegetables"></div>
       <!--Product category-->
       <section>
-        <h4 id="category_title">Vegetables</h4>
+        <h4 class="category_title">Vegetables</h4>
         <!--Product card-->
         <div class="product_category">
           <div class="card text-center">
@@ -346,7 +346,7 @@
       <div class="space" id="bread"></div>
       <!--Product category-->
       <section>
-        <h4 id="category_title">Bread</h4>
+        <h4 class="category_title">Bread</h4>
         <!--Product card-->
         <div class="product_category">
           <div class="card text-center">
@@ -470,7 +470,7 @@
       <!--The following code was written in collaboration with Iuliia Ustkachkintseva and included with her permission-->
       <!--Product category-->
       <section>
-        <h4 id="category_title">Desserts</h4>
+        <h4 class="category_title">Desserts</h4>
         <!--Product card-->
         <div class="product_category">
           <div class="card text-center">
@@ -593,7 +593,7 @@
       <div class="space" id="pasta"></div>
       <!--Product category-->
       <section>
-        <h4 id="category_title">Pasta</h4>
+        <h4 class="category_title">Pasta</h4>
         <!--Product card-->
         <div class="product_category">
           <div class="card text-center">
@@ -716,7 +716,7 @@
       <div class="space" id="cheese"></div>
       <!--Product category-->
       <section>
-        <h4 id="category_title">Cheese</h4>
+        <h4 class="category_title">Cheese</h4>
         <!--Product card-->
         <div class="product_category">
           <div class="card text-center">
@@ -840,8 +840,8 @@
     </div>
     <!--End of products-->
     <!--Social media links:-->
-    <footer id="landing_footer">
-      <div id="social_media">
+    <footer class="landing_footer">
+      <div class="social_media">
         <a href="https://twitter.com/?lang=en-gb"
           ><i class="fa-brands fa-square-twitter"></i
         ></a>
