add media query for landing page iPhone XR screen

--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
           <p>
             Fresh, locally sourced produce delivered to your door. Try our award
             winning cheeses, treat yourself to one of our handmade cakes or whip
-            up a quick dinner with our pasta range. We also cater events and
-            parties.
+            up a quick dinner with our pasta range.
           </p>
         </div>
       </div>
