edit landing page media queries

--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
       <!--Mailing list-->
       <div id="form_container">
         <form id="mailing_list">
-          <label onmouseover="discountAlert()">Join our mailing list:</label
-          ><br />
+          <label onmouseover="discountAlert()">Join our mailing list:</label>
+          <br />
           <input
             type="text"
             id="email"
