change product card layout from grid to flex box

--- a/shop.html
+++ b/shop.html
@@ -199,7 +199,7 @@
             <img
               src="img\shop_page\nick-sarro-qydnkODHMo4-unsplash.jpg"
               class="card-img-top"
-              alt="Basket of blackberries"
+              alt="A basket of blackberries"
             />
             <div class="card-body">
               <h5 class="card-title">Blackberries</h5>
