add alt tags to social media icons and background images

--- a/index.html
+++ b/index.html
@@ -98,9 +98,11 @@
       </nav>
       <!--End of navbar-->
     </header>
-
     <main>
-      <div id="background_image">
+      <div
+        id="background_image"
+        alt="Piles of raw leeks, carrots, courgettes, onion, broccoli and runner beans"
+      >
         <div id="text_container">
           <h1>Fig and Pepper</h1>
           <p>
@@ -135,7 +137,7 @@
               <img
                 src="img\landing_page\clark-douglas-17ZU9BPy_Q4-unsplash.jpg"
                 class="d-block w-100 carousel_image"
-                alt="Bowl of spaghetti on a woodentable with a glass of wine and cutlery"
+                alt="Bowl of spaghetti on a wooden table with a glass of wine and cutlery"
               />
             </div>
             <div class="carousel-item">
@@ -169,7 +171,7 @@
         <img
           class="carousel_side"
           src="img\landing_page\heather-barnes-WbZesfqwR-A-unsplash.jpg"
-          alt="multicoloured macarons"
+          alt="Multicoloured macarons"
         />
       </div>
       <!--Mailing list-->
@@ -190,13 +192,22 @@
     <!--Social media links-->
     <footer class="landing_footer">
       <div class="social_media">
-        <a href="https://twitter.com/?lang=en-gb"
+        <a
+          href="https://twitter.com/?lang=en-gb"
+          alt="Twitter icon"
+          target="_blank"
           ><i class="fa-brands fa-square-twitter"></i
         ></a>
-        <a href="https://en-gb.facebook.com/"
+        <a
+          href="https://en-gb.facebook.com/"
+          alt="Facebook icon"
+          target="_blank"
           ><i class="fa-brands fa-square-facebook"></i
         ></a>
-        <a href="https://www.instagram.com/"
+        <a
+          href="https://www.instagram.com/"
+          alt="Instagram icon"
+          target="_blank"
           ><i class="fa-brands fa-instagram"></i
         ></a>
       </div>
