--- a/register.html
+++ b/register.html
@@ -98,7 +98,10 @@
       <!--End of navbar-->
     </header>
     <!--Start of log in form-->
-    <div id="login_page_background">
+    <div
+      id="login_page_background"
+      alt="Piles of raw leeks, carrots, courgettes, onion, broccoli and runner beans"
+    >
       <div id="login_form">
         <h4>Log in here:</h4>
         <form>
@@ -178,13 +181,22 @@
     <!--Social media links-->
     <footer class="landing_footer">
       <div class="social_media">
-        <a href="https://twitter.com/?lang=en-gb"
+        <a
+          href="https://twitter.com/?lang=en-gb"
+          alt="Twitter icon"
+          target="_blank"
           ><i class="fa-brands fa-square-twitter"></i
         ></a>
-        <a href="https://en-gb.facebook.com/"
+        <a
+          href="https://en-gb.facebook.com/"
+          alt="Facebook icon"
+          target="_blank"
           ><i class="fa-brands fa-square-facebook"></i
         ></a>
-        <a href="https://www.instagram.com/"
+        <a
+          href="https://www.instagram.com/"
+          alt="Instagram icon"
+          target="_blank"
           ><i class="fa-brands fa-instagram"></i
         ></a>
       </div>
