--- a/shop.html
+++ b/shop.html
@@ -842,13 +842,22 @@
     <!--Social media links:-->
     <footer class="landing_footer">
       <div class="social_media">
-        <a href="https://twitter.com/?lang=en-gb"
+        <a
+          href="https://twitter.com/?lang=en-gb"
+          alt="Twitter icon"
+          target="_blank"
           ><i class="fa-brands fa-square-twitter"></i
         ></a>
-        <a href="https://en-gb.facebook.com/"
+        <a
+          href="https://en-gb.facebook.com/"
+          alt="Facebook icon"
+          target="_blank"
           ><i class="fa-brands fa-square-facebook"></i
         ></a>
-        <a href="https://www.instagram.com/"
+        <a
+          href="https://www.instagram.com/"
+          alt="Instagram icon"
+          target="_blank"
           ><i class="fa-brands fa-instagram"></i
         ></a>
       </div>
