remove class from footer element

--- a/shop.html
+++ b/shop.html
@@ -840,7 +840,7 @@
     </div>
     <!--End of products-->
     <!--Social media links:-->
-    <footer class="landing_footer">
+    <footer>
       <div class="social_media">
         <a
           href="https://twitter.com/?lang=en-gb"
