--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       </div>
     </main>
     <!--Social media links-->
-    <footer class="landing_footer">
+    <footer>
       <div class="social_media">
         <a
           href="https://twitter.com/?lang=en-gb"
