--- a/register.html
+++ b/register.html
@@ -179,7 +179,7 @@
       <!--End of registration form-->
     </div>
     <!--Social media links-->
-    <footer class="landing_footer">
+    <footer>
       <div class="social_media">
         <a
           href="https://twitter.com/?lang=en-gb"
