--- a/register.html
+++ b/register.html
@@ -227,34 +227,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />-->
-<!--Bootstrap CSS link-->
-<link
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Bootstrap CSS link-->
+    <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
       crossorigin="anonymous"
     />
-<!--Font Awesome link-->
-<script
+    <!--Font Awesome link-->
+    <script
       src="https://kit.fontawesome.com/e02dd0949b.js"
       crossorigin="anonymous"
     ></script>
-<!--Google Font link-->
-<link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!--Google Font link-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Sanchez&display=swap"
       rel="stylesheet"
     />
-<!--CSS link-->
-<link rel="stylesheet" href="style.css" />
+    <!--CSS link-->
+    <link rel="stylesheet" href="style.css" />
     <title>CFG Project</title>
   </head>
   <body>
     <header>
-<!--Bootstrap navbar:-->
-<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
+      <!--Bootstrap navbar:-->
+      <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
         <a class="navbar-brand" href="./index.html"
           ><img
             class="company_logo"
@@ -319,62 +319,120 @@
           </ul>
         </div>
       </nav>
-<!--End of navbar-->
+      <!--End of navbar-->
     </header>
-
-  <!--Start of Iuliia's code-->  
-    <main> 
+    <!--Start of code written in collaboration with Iuliia Ustkachkintseva-->
+    <div
+      id="login_page_background"
+      alt="Piles of raw leeks, carrots, courgettes, onion, broccoli and runner beans"
+    >
+    <!--Log in form-->
+      <div class="login_register_form">
+        <h4>Log in</h4>
         <form action="action_page.php">
-        <div class="container_login">
-            <h1>Log in </h1>
-            <input type="text" placeholder="Enter Email" name="email" id="email" required>
-            <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
-            <button type="submit" class="registerbtn">Log in</button>
-        </div>
-​
-        <div class="container">
-          <h1>Register</h1>
-          <p>Please fill in this form to create an account</p>
-            <hr>
-                <input type="text" placeholder="Enter Email" name="email" id="email" required>
-                <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
-                <input type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" required>
-            </hr>
-          <p>By creating an account you agree to our <a href="#">Terms & Privacy</a></p>
-          <button type="submit" class="registerbtn">Register</button>
-        </div>
-        </form>
-    </main>
-    <!--Mailing list-->
-    <div id="form_container">
-        <form id="mailing_list">
-          <label>Join our mailing list:</label><br />
-          <input
-            type="text"
-            id="email"
-            name="email"
-            placeholder="Email address"
-          />
-          <button id="mailing_submit">Submit</button>
+          <div class="form-group">
+            <input
+              type="email"
+              placeholder="Enter email"
+              class="form-control"
+              id="login_email"
+              aria-describedby="emailHelp"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <input
+              type="password"
+              placeholder="Enter password"
+              class="form-control"
+              id="login_password"
+              required
+            />
+          </div>
+          <button type="submit" class="btn btn-primary">Log in</button>
         </form>
       </div>
-    </main>
+      <!--End of log in form-->
+      <!--Registration form-->
+      <div class="login_register_form">
+        <h4>Register</h4>
+        <p>Please fill in this form to create an account:</p>
+        <div class="form-group">
+          <input
+            type="email"
+            placeholder="Enter email"
+            class="form-control"
+            id="register_email"
+            aria-describedby="emailHelp"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <input
+            type="password"
+            placeholder="Enter password"
+            class="form-control"
+            id="register_password"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <input
+            type="password"
+            placeholder="Repeat password"
+            class="form-control"
+            id="repeat_password"
+            required
+          />
+        </div>
+          <p>By creating an account you agree to our Terms & Privacy</p>
+          <button type="submit" class="btn btn-primary">Register</button>
+        </form>
+      </div>
+      <!--End of registration form-->
+    </div>
+    <!--End of code written in collaboration with Iuliia Ustkachkintseva-->
     <!--Social media links-->
-    <footer id="landing_footer">
-      <div id="social_media">
-        <a href="https://twitter.com/?lang=en-gb"
+    <footer>
+      <div class="social_media">
+        <a
+          href="https://twitter.com/?lang=en-gb"
+          alt="Twitter icon"
+          target="_blank"
           ><i class="fa-brands fa-square-twitter"></i
         ></a>
-        <a href="https://en-gb.facebook.com/"
+        <a
+          href="https://en-gb.facebook.com/"
+          alt="Facebook icon"
+          target="_blank"
           ><i class="fa-brands fa-square-facebook"></i
         ></a>
-        <a href="https://www.instagram.com/"
+        <a
+          href="https://www.instagram.com/"
+          alt="Instagram icon"
+          target="_blank"
           ><i class="fa-brands fa-instagram"></i
         ></a>
       </div>
     </footer>
     <!--Bootstrap JavaScript link-->
-    <script src="./main.js"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+      integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
+      crossorigin="anonymous"
+    ></script>
+    -->
+    <!--JavaScript link-->
+    <script src="main.js"></script>
+  </body>
 </html>
-<!--End of Iuliia's code-->
