change background image on log in page and edit layout of login form

--- a/register.html
+++ b/register.html
@@ -1,227 +1,3 @@
-<!--<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />-->
-<!--Bootstrap CSS link-->
-<!--<link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
-      crossorigin="anonymous"
-    />-->
-<!--Font Awesome link-->
-<!--<script
-      src="https://kit.fontawesome.com/e02dd0949b.js"
-      crossorigin="anonymous"
-    ></script>-->
-<!--Google Font link-->
-<!--<link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Sanchez&display=swap"
-      rel="stylesheet"
-    />-->
-<!--CSS link-->
-<!--<link rel="stylesheet" href="style.css" />
-    <title>CFG Project</title>
-  </head>
-  <body>
-    <header>-->
-<!--Bootstrap navbar:-->
-<!--<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
-        <a class="navbar-brand" href="./index.html"
-          ><img
-            class="company_logo"
-            src="img\landing_page\Logo.png
-          "
-            alt="Fig and Pepper logo"
-        /></a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" class="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="./register.html">Log in/register</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Shop
-              </a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="shop.html#fruit">Fruit</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="shop.html#vegetables"
-                  >Vegetables</a
-                >
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="shop.html#bread">Bread</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="shop.html#desserts">Desserts</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="shop.html#pasta">Pasta</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="shop.html#cheese">Cheese</a>
-              </div>
-            </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li class="nav-item">
-              <a class="nav-link"
-                ><img
-                  class="cart_icon"
-                  src="img\landing_page\cart4.svg"
-                  alt="Shopping cart icon"
-                  onclick="cartAlert()"
-              /></a>
-            </li>
-          </ul>
-        </div>
-      </nav>-->
-<!--End of navbar-->
-<!--</header>-->
-<!--Start of log in form-->
-<!--<div
-      id="login_page_background"
-      alt="Piles of raw leeks, carrots, courgettes, onion, broccoli and runner beans"
-    >
-      <div id="login_form">
-        <h4>Log in here:</h4>
-        <form>
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input
-              type="email"
-              class="form-control"
-              id="exampleInputEmail1"
-              aria-describedby="emailHelp"
-            />
-            <small id="emailHelp" class="form-text text-muted"
-              >We'll never share your email with anyone else.</small
-            >
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input
-              type="password"
-              class="form-control"
-              id="exampleInputPassword1"
-            />
-          </div>
-          <div class="form-group form-check">
-            <input
-              type="checkbox"
-              class="form-check-input"
-              id="exampleCheck1"
-            />
-            <label class="form-check-label" for="exampleCheck1"
-              >Keep me logged in</label
-            >
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-      </div>-->
-<!--End of log in form-->
-<!--Start of registration form-->
-<!--<div id="registration_form">
-        <h4>Register here:</h4>
-        <form>
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input
-              type="email"
-              class="form-control"
-              id="exampleInputEmail1"
-              aria-describedby="emailHelp"
-            />
-            <small id="emailHelp" class="form-text text-muted"
-              >We'll never share your email with anyone else.</small
-            >
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input
-              type="password"
-              class="form-control"
-              id="exampleInputPassword1"
-            />
-          </div>
-          <div class="form-group form-check">
-            <input
-              type="checkbox"
-              class="form-check-input"
-              id="exampleCheck1"
-            />
-            <label class="form-check-label" for="exampleCheck1"
-              >I agree to the terms and conditions</label
-            >
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-      </div>-->
-<!--End of registration form-->
-<!--</div>-->
-<!--Social media links-->
-<!--<footer>
-      <div class="social_media">
-        <a
-          href="https://twitter.com/?lang=en-gb"
-          alt="Twitter icon"
-          target="_blank"
-          ><i class="fa-brands fa-square-twitter"></i
-        ></a>
-        <a
-          href="https://en-gb.facebook.com/"
-          alt="Facebook icon"
-          target="_blank"
-          ><i class="fa-brands fa-square-facebook"></i
-        ></a>
-        <a
-          href="https://www.instagram.com/"
-          alt="Instagram icon"
-          target="_blank"
-          ><i class="fa-brands fa-instagram"></i
-        ></a>
-      </div>
-    </footer>-->
-<!--Bootstrap JavaScript link-->
-<!--<script
-      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
-      integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
-      crossorigin="anonymous"
-    ></script>-->
-<!--JavaScript link-->
-<!--<script src="main.js"></script>
-  </body>
-</html>-->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -324,11 +100,12 @@
     <!--Start of code written in collaboration with Iuliia Ustkachkintseva-->
     <div
       id="login_page_background"
-      alt="Piles of raw leeks, carrots, courgettes, onion, broccoli and runner beans"
+      alt="Pink, purple and yellow macarons on a pink background"
     >
     <!--Log in form-->
       <div class="login_register_form">
         <h4>Log in</h4>
+        <p>Please enter your details:</p>
         <form action="action_page.php">
           <div class="form-group">
             <input
@@ -349,7 +126,12 @@
               required
             />
           </div>
-          <button type="submit" class="btn btn-primary">Log in</button>
+          <div class="form-group form-check">
+            <input type="checkbox" class="form-check-input" id="check_box">
+            <label class="form-check-label" for="check_box">Remember me</label>
+          </div>
+          <p>Forgot your password?</p>
+          <button type="submit" class="btn" id="login_button">Log in</button>
         </form>
       </div>
       <!--End of log in form-->
@@ -386,7 +168,7 @@
           />
         </div>
           <p>By creating an account you agree to our Terms & Privacy</p>
-          <button type="submit" class="btn btn-primary">Register</button>
+          <button type="submit" class="btn">Register</button>
         </form>
       </div>
       <!--End of registration form-->
