add mobile media queries for log in page

--- a/register.html
+++ b/register.html
@@ -104,7 +104,7 @@
     >
     <!--Log in form-->
       <div class="login_register_form">
-        <h4>Log in</h4>
+        <h4 class="form_title">Log in</h4>
         <p>Please enter your details:</p>
         <form action="action_page.php">
           <div class="form-group">
@@ -137,7 +137,7 @@
       <!--End of log in form-->
       <!--Registration form-->
       <div class="login_register_form">
-        <h4>Register</h4>
+        <h4 class="form_title">Register</h4>
         <p>Please fill in this form to create an account:</p>
         <div class="form-group">
           <input
@@ -213,7 +213,6 @@
       integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
       crossorigin="anonymous"
     ></script>
-    -->
     <!--JavaScript link-->
     <script src="main.js"></script>
   </body>
