--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <body>
     <header>
-      <!--Bootstrap navbar:-->
+      <!--Bootstrap navbar-->
       <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
         <a class="navbar-brand"
           ><img
@@ -50,8 +50,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-
-        <div class="collapse navbar-collapse" class="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
               <a class="nav-link" href="./register.html">Log in/register</a>
@@ -83,7 +82,7 @@
               </div>
             </li>
           </ul>
-          <ul class="nav navbar-nav navbar-right">
+          <ul class="nav navbar-nav mr-sm-2">
             <li class="nav-item">
               <a class="nav-link"
                 ><img
@@ -96,7 +95,7 @@
           </ul>
         </div>
       </nav>
-      <!--End of navbar-->
+      <!--End of Bootstrap navbar-->
     </header>
     <main>
       <div
