copy new navbar to additional pages

--- a/shop.html
+++ b/shop.html
@@ -49,8 +49,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-
-        <div class="collapse navbar-collapse" class="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
               <a class="nav-link" href="./register.html">Log in/register</a>
@@ -80,7 +79,7 @@
               </div>
             </li>
           </ul>
-          <ul class="nav navbar-nav navbar-right">
+          <ul class="nav navbar-nav mr-sm-2">
             <li class="nav-item">
               <a class="nav-link"
                 ><img
