--- a/register.html
+++ b/register.html
@@ -49,8 +49,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-
-        <div class="collapse navbar-collapse" class="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
               <a class="nav-link" href="./register.html">Log in/register</a>
@@ -68,9 +67,7 @@
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="shop.html#fruit">Fruit</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="shop.html#vegetables"
-                  >Vegetables</a
-                >
+                <a class="dropdown-item" href="shop.html#vegetables">Vegetables</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="shop.html#bread">Bread</a>
                 <div class="dropdown-divider"></div>
@@ -82,7 +79,7 @@
               </div>
             </li>
           </ul>
-          <ul class="nav navbar-nav navbar-right">
+          <ul class="nav navbar-nav mr-sm-2">
             <li class="nav-item">
               <a class="nav-link"
                 ><img
