add media queries for navbar

--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
                   src="img\landing_page\cart4.svg"
                   alt="Shopping cart icon"
                   onclick="cartAlert()"
-              /></a>
+                />
+                <p class="cart_text" onclick="cartAlert()">Cart</p></a
+              >
             </li>
           </ul>
         </div>
