--- a/register.html
+++ b/register.html
@@ -87,7 +87,7 @@
                   src="img\landing_page\cart4.svg"
                   alt="Shopping cart icon"
                   onclick="cartAlert()"
-              /></a>
+              /><p class="cart_text" onclick="cartAlert()">Cart</p></a>
             </li>
           </ul>
         </div>
