add media query for footer

--- a/register.html
+++ b/register.html
@@ -172,7 +172,7 @@
     </div>
     <!--End of code written in collaboration with Iuliia Ustkachkintseva-->
     <!--Social media links-->
-    <footer>
+    <footer class="additional_footer">
       <div class="social_media">
         <a
           href="https://twitter.com/?lang=en-gb"
