--- a/shop.html
+++ b/shop.html
@@ -841,7 +841,7 @@
     </div>
     <!--End of products-->
     <!--Social media links:-->
-    <footer>
+    <footer class="additional_footer">
       <div class="social_media">
         <a
           href="https://twitter.com/?lang=en-gb"
