adjust layout of login page on mobile screen

--- a/register.html
+++ b/register.html
@@ -100,7 +100,7 @@
       alt="Pink, purple and yellow macarons on a pink background"
     >
     <!--Log in form-->
-      <div class="login_register_form">
+      <div id="login_form">
         <h4 class="form_title">Log in</h4>
         <p>Please enter your details:</p>
         <form action="action_page.php">
@@ -133,7 +133,7 @@
       </div>
       <!--End of log in form-->
       <!--Registration form-->
-      <div class="login_register_form">
+      <div id="register_form">
         <h4 class="form_title">Register</h4>
         <p>Please fill in this form to create an account:</p>
         <div class="form-group">
