--- a/shop.html
+++ b/shop.html
@@ -716,7 +716,7 @@
       <!--End of product category-->
       <div class="space" id="cheese"></div>
       <!--Product category-->
-      <section>
+      <section id="final_section">
         <h4 class="category_title">Cheese</h4>
         <!--Product card-->
         <div class="product_category">
