adjust layout of shop page on mobile screen

--- a/shop.html
+++ b/shop.html
@@ -812,7 +812,7 @@
             </div>
           </div>
           <!--Product card-->
-          <div class="card text-center">
+          <div class="card text-center" id="final_card">
             <img
               src="img\shop_page\cheese-ricotta.jpg"
               class="card-img-top"
