--- a/index.html
+++ b/index.html
@@ -89,10 +89,13 @@
                   class="cart_icon"
                   src="img\landing_page\cart4.svg"
                   alt="Shopping cart icon"
-                  onclick="cartAlert()"
+                  onmouseover="cartAlert()"
                 />
-                <p class="cart_text" onclick="cartAlert()">Cart</p></a
+                <p class="cart_text" onmouseover="cartAlert()">Cart</p></a
               >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" id="cart_message"></a>
             </li>
           </ul>
         </div>
@@ -105,12 +108,13 @@
         alt="Piles of raw leeks, carrots, courgettes, onion, broccoli and runner beans"
       >
         <div id="text_container">
-          <h1>Fig and Pepper</h1>
+          <h1 id="main_title" onmouseover="discountAlert()">Fig and Pepper</h1>
           <p>
             Fresh, locally sourced produce delivered to your door. Try our award
             winning cheeses, treat yourself to one of our handmade cakes or whip
             up a quick dinner with our pasta range.
           </p>
+          <h5 id="mailing_list_prompt"></h5>
         </div>
       </div>
       <div id="carousel_container">
@@ -178,7 +182,7 @@
       <!--Mailing list-->
       <div id="form_container">
         <form id="mailing_list">
-          <label onmouseover="discountAlert()">Join our mailing list:</label>
+          <label>Join our mailing list:</label>
           <br />
           <input
             type="text"
