--- a/register.html
+++ b/register.html
@@ -86,8 +86,11 @@
                   class="cart_icon"
                   src="img\landing_page\cart4.svg"
                   alt="Shopping cart icon"
-                  onclick="cartAlert()"
-              /><p class="cart_text" onclick="cartAlert()">Cart</p></a>
+                  onmouseover="cartAlert()"
+              /><p class="cart_text" onmouseover="cartAlert()">Cart</p></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" id="cart_message"></a>
             </li>
           </ul>
         </div>
